--- a/public/grupos/cadastrar.html
+++ b/public/grupos/cadastrar.html
@@ -13,25 +13,14 @@
         SINOPSE
         DATA-LANCAMENTO
     -->
-    <h1>Cadastro filmes</h1>
+    <h1>Cadastro grupos</h1>
 
-    <form action="/filmes" method="POST">
+    <form action="/grupos" method="POST">
         <label for="nome">Nome</label>
         <input type="text" name="nome">
         <br /><br />
 
-        <label for="genero">Genero</label>
-        <input type="text" name="genero">
-        <br /><br />
-
-        <label for="sinopse">Sinopse</label>
-        <input type="text" name="sinopse">
-        <br /><br />
-        
-        <label for="lancamento">Lançado em</label>
-        <input type="date" name="lancamento">
-        <br /><br />
-
+      
         <input type="submit" value="CADASTRAR">
         <br /><br />        
 
